# openrouter-monitor

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
openrouter_monitor/: __init__.py  bot.py  cli.py  config.py  feishu.py  messages.py  models.py  openrouter_client.py  service.py  state_store.py  utils.py
tests/: test_bot.py  test_cli.py  test_config.py  test_feishu.py  test_openrouter_client.py  test_service.py  test_snapshots.py  test_trend.py
