[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openrouter-monitor"
version = "0.1.0"
description = "Monitor OpenRouter API keys with a Feishu long-connection app bot."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
  { name = "OpenRouter Monitor Contributors" }
]
keywords = ["openrouter", "monitoring", "feishu", "bot", "python"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "APScheduler==3.10.4",
  "lark-oapi==1.5.3",
  "PyYAML==6.0.2",
  "requests==2.32.3",
]

[project.scripts]
openrouter-monitor = "openrouter_monitor.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["openrouter_monitor*"]
